<resources>
    <string name="app_name">Hot Air</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Username</string>
    <string name="forgot_pw">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_messages">Welcome, %1$s!</string>
    <string name="order_history">Which one would you like to review, %1$s?</string>
    <string name="ordermsg">Time Of Order: </string>
    <string name="orderdate">21/12/17</string>
    <string name="etamsg">Here are what you missed</string>
    <string name="etadate">25/12/17</string>
    <string-array name="issues">
        <item>Dead on Arrival</item>
        <item>Wrong Item</item>
        <item>Damaged Product</item>
    </string-array>

</resources>
