<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jc346295.hotair.LoginActivity">

    <EditText
        android:id="@+id/userEmail"
        android:hint="@string/email"
        android:layout_width="349dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/userPassword"
        android:hint="@string/password"
        android:layout_width="350dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="77dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        tools:layout_editor_absoluteY="136dp"
        tools:layout_editor_absoluteX="148dp"
        android:onClick="onClick"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="360dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginLeft="210dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pw"
            android:layout_gravity="end"/>

    </LinearLayout>



</LinearLayout>
